# helm-plugin-SRP

./: .gitignore  CLAUDE.md  README.md  README_zh.md  build.bat  pyproject.toml
.github/workflows/: publish.yml
helm_plugin_srp/: models.py  plugin.py  routers.py  schemas.py  tool_provider.py
helm_plugin_srp/frontend/: index.html  package-lock.json  package.json  vite.config.ts
helm_plugin_srp/frontend/src/: App.vue  api.ts  main.ts  style.css  vite-env.d.ts
helm_plugin_srp/frontend/src/charts/: echarts.ts
helm_plugin_srp/frontend/src/components/: AlertDialog.vue  CharSelectDialog.vue  CustomSelect.vue  KillmailDetailModal.vue  RejectDialog.vue  RequestTable.vue  StatusBadge.vue
helm_plugin_srp/frontend/src/composables/: useAlertDialog.ts  useHelmSdk.ts
helm_plugin_srp/frontend/src/i18n/: en.ts  index.ts  zh.ts
helm_plugin_srp/frontend/src/views/: ConfigView.vue  DashboardView.vue  FleetQuickView.vue  ManageView.vue  MyRequestsView.vue  PapFleetView.vue
helm_plugin_srp/migrations/: alembic.ini  env.py
helm_plugin_srp/migrations/versions/: 0001_initial.py  0002_add_items_json.py  0003_add_full_loss_config.py  0004_add_pap_config.py
helm_plugin_srp/services/: esi.py  killmail.py  pricing.py
